Some fixes to the 5th lecture.

--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -36,15 +36,15 @@
 		5. óra.
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
-	\section{A c++ memóriamodellje}
-	A c++ szabvány 3 memóriatípust különít el. Ezek közül főleg a stack-et használtuk eddig.
+	\section{A C++ memóriamodellje}
+	A C++ szabvány több memóriatípust különít el. Ezek közül főleg a stack-et használtuk eddig.
 	\begin{center}
 		\begin{tabular}{|c|}
 			\\
 			\\
 			\\
 			\\
-			stack\\
+			Stack\\
 			\\
 			\hline
 		\end{tabular}\quad 
@@ -52,7 +52,7 @@
 			\hline
 			\quad \quad \\
 			\\
-			Globális/statikus\\
+			Globális/Statikus\\
 			\\
 			\hline
 		\end{tabular}\quad 
@@ -60,19 +60,19 @@
 			\hline
 			\quad \quad \\
 			\\
-			Heap/free storage\\
+			Heap/Free store\\
 			\\
 			\hline
 		\end{tabular}
 	\end{center}
 	\subsection{Stack}
-	A második gyakorlaton már volt szó részletesebben a stack működéséről. Jusson eszünkbe egy nagyon fontos tulajdonsága: azok a változók, amelyekre már többet nem tudunk hivatkozni, automatikusan megsemmisülnek, így nem kell a létrehozással és a megsemmisítéssel külön bajlódnunk.
+	A második gyakorlaton már volt szó részletesebben a stack működéséről. Jusson eszünkbe egy nagyon fontos tulajdonsága: a blockok végén a változók automatikusan megsemmisülnek. Ebben az esetben nem a programozó feladata a memória felszabadítása.
 	\smallskip
 	
 	A stack-en létrehozott változókat szokás \textbf{automatikus változók}nak (\textit{automatic variable}) is hívni.
 	
 	\smallskip
-	Vegyük példaként a második gyakorlatról már ismerős kódrészletet.
+	Tekintsük a második gyakorlatról már ismerős kódrészletet.
 	
 	\begin{lstlisting}
 #include <iostream>
@@ -86,19 +86,15 @@ int f()
 
 int main()
 {
-	std::cout << f() << std::endl;
-	std::cout << f() << std::endl;
-	std::cout << f() << std::endl;
-	std::cout << f() << std::endl;
-	std::cout << f() << std::endl;
+  for(int i = 0; i < 5; ++i)
+	  std::cout << f() << std::endl;
 }
 	\end{lstlisting}
 	Kimenet: \texttt{1 1 1 1 1}
 	\smallskip
 	
-	A stacken lérehozott változók kezelése nagyon kényelmes, mert jól látható, mikor jönnek jönnek létre, mikor semmisülnek meg, stb. Azonban fordulhat elő olyan, hogy nem szeretnénk, hogy minden alkalommal megsemmisüljön a fenti példában az \texttt{x}, ilyenkor kiút lehet a statikus változók használata.
+  A stacken lérehozott változók kezelése nagyon kényelmes, mert jól látható, mikor jönnek jönnek létre, mikor semmisülnek meg. Azonban előfordulhat, hogy nem szeretnénk, hogy az \texttt{x} változó élettartama megszűnjön a block végén. Ilyenkor egy lehetőség a statikus változók használata.
 	\subsection{Globális/statikus tárhely}
-	%TODO globális változók
 	Írjuk át a fenti \texttt{f} függvényt, hogy \texttt{x} ne automatikus, hanem \textbf{statikus változó} (\textit{static variable}) legyen!
 	\begin{lstlisting}
 int f()
@@ -112,23 +108,27 @@ int main() {/*...*/}
 	\end{lstlisting}
 	Kimenet: \texttt{1 2 3 4 5}
 	
-	Ebben az esetben azonban a függvény első hivásától a program futásának végéig benne marad a memóriában az \texttt{x}, így mindig egyre nagyobb számokat ad majd \texttt{f()} vissza.
+  Ebben az esetben azonban a függvény első hivásától a program futásának végéig benne marad a memóriában az \texttt{x}, így mindig egyre nagyobb számokat ad majd \texttt{f()} vissza. Az \texttt{x} inicializációja egyszer történik meg, a függvény első hívásakor. 
 	\begin{note}
-		Nem igazán szeretjük a \texttt{static} változókat. Például a multithread programok különösen tudnak szenvedni tőle, mert nehéz, vagy lehetetlen átlátni, hogy mikor mire változik az értékük.
+		Nem szeretjük a \texttt{static} változókat. Például a több szálú programok esetén különösen kerülendő ez a programozási stílus.
 	\end{note}
-	Amennyiben azt szeretnénk hogy \texttt{x} ne is semmisüljön meg azonnal, de statikus se legyen, létrehozhatjuk úgy, hogy a megsemmisítéséről is nekünk kell gondoskodni.
-	\subsection{Heap/free storage}
-	A heap-en létrehzoott változókat \textbf{dinamikus változók}nak (\textit{dynamic variable}) is szokás szokás hívni. A heap segítségével nagyon nagy szabadságra tehetünk szert, azonban ez a szabadság kötelességekkel is jár.
+
+  A globális változók és a statikus változók a memória ugyanazon területén jönnek létre. Ezért hívjuk ezt a területet globális/statikus tárhelynek.
+
+  \medskip
+	Amennyiben azt szeretnénk, hogy \texttt{x} ne semmisüljön meg a block végén, de ne is maradjon a program futásának a végéig a memóriában, arra is van lehetőség. Ebben az esetben viszont a programozó felel a memória kezeléséért.
+	\subsection{Heap/Free store}
+	A heapen létrehzoott változókat \textbf{dinamikus változók}nak (\textit{dynamic variable}) is szokás szokás hívni. A heap segítségével nagy szabadságra tehetünk szert, azonban ez a szabadság nagy felelősséggel is jár.
 	\begin{lstlisting}
 int main()
 {
-	int *p = new int(5);
+	int *p = new int(2);
 	delete p;
 }
 	\end{lstlisting}
-	Fentebb láthatjuk hogyan lehet egy változót a heap-en létrehozni. Ehhez használatos a \texttt{new} operátor, a heapen lefoglalandó memória típusa (ez esetben \texttt{int}), és konstruktor paraméterek (itt példaképp 5 kezdőértékkel inicializálink). Fontos, hogy a stack-et teljesen nem kerültük meg, mert szükségünk van egy pointerre, mely a heap-en kezelt címre mutat (\texttt{p}).
+	Fentebb láthatjuk hogyan lehet egy intnek lefoglalni helyet a heapen. Fontos, hogy a stack-et nem kerültük meg, mert szükségünk van egy pointerre, mely a heap-en lefoglalt címre mutat (\texttt{p}).
 	
-	Ezt a címet a \texttt{delete} operátorral tudjuk felszabadítani.
+	A mutató által mutatott területet a \texttt{delete} operátorral tudjuk felszabadítani.
 	\begin{figure}[!h]
 		\centering
 		\begin{tikzpicture}
@@ -153,23 +153,23 @@ int main()
 		\end{tikzpicture}
 	\end{figure}
 	
-	A heapen nincs a változóknak nevük, így mindig szükségünk lesz egy mutatóra, hogy tudjunk rá hivatkozni. \textbf{Ha egyszer létrehozunk valamit a heap-en, nekünk is kell gondoskodni arról, hogy felszabadítsuk.} Az egyik leggyakoribb hiba a dinamikus memóriakezelésnél, ha a memóriát nem szabadítjuk fel, ilyenkor a lefoglalt memóriaterületre hivatkozni már nem lehet de lefoglalva marad, mondhatni elszivárog (\textit{memory leak}). 
+	A heapen nincs a lefoglalt területnek nevük, így mindig szükségünk lesz egy mutatóra, hogy tudjunk rá hivatkozni. \textbf{Ha egyszer lefoglalunk valamit a heap-en, gondoskodni kell arról, hogy felszabadítsuk.} Az egyik leggyakoribb hiba a dinamikus memóriakezelésnél, ha a memóriát nem szabadítjuk fel. Ilyenkor a lefoglalt memóriaterületre hivatkozni már nem tudunk de lefoglalva marad: elszivárog (\textit{memory leak}). 
 	\smallskip
 	
-	Bár az operációs rendszer erre szokott figyelni, és megpróbál minden, a program által lefoglalt memóriát felszabadítani a dutás befejeztével, de nem mindenható, előfordulhat hogy ez nem elég teljeskörú, és ilyenkor az a memóriaterületek újraindításig lefoglalva maradnak.
+	Bár az operációs rendszer megpróbál minden, a program által lefoglalt memóriát felszabadítani a futás befejeztével, de nem mindenható. Előfordulhat, hogy egyes platformokon újraindításig nem szabadul fel a memória. Emellett ameddig a program fut, több memóriát fog használni, mint amennyire szüksége van. Ez növelheti a szerverpark költségeit vagy ronthatja a felhasználói élményt.
 	\medskip
 	
-	A dinamikus lefoglalt memória szabályos felszabadítását számos dolog nehezíti. Fényes példa erre a kivételkezelés, melynél hamarabb félbreszakítódik a függvény mintsem hogy felszabadítson minden memóriát. Azonban ha nagyon ügyelünk erre, előfordulhat hogy nem figyelünk, és egy memóriaterületet kétszer szabadítunk fel, ami nem definiált viselkedés.
+	A dinamikusan lefoglalt memória szabályos felszabadítását számos dolog nehezíti. Fényes példa erre a kivételkezelés, melynél hamarabb megszakadhat a függvény végrehajtása mintsem, hogy felszabadítson minden memóriát. Előfordulhat, hogy egy memóriaterületet kétszer szabadítunk fel, ami nem definiált viselkedés.
 	\medskip
 	
-	Előfordulhat, hogy egy már felszabadított memóriaterületre akarunk írni. Sajnos iylen hibát könnyű ejteni, hisz a \texttt{delete} a \texttt{p} által mutatott memóriaterületet, nem a \texttt{p}-t fogja törölni.
+  Előfordulhat, hogy egy már felszabadított memóriaterületre akarunk írni vagy onnan olvasni. Sajnos ilyen jellegű hibát könnyű véteni, hisz a \texttt{delete} a \texttt{p} által mutatott memóriaterületet, nem a \texttt{p}-t fogja törölni. A \texttt{p} továbbra is használható.
 	\begin{note}
 		A nullpointer törlésekor nem történik semmi (\textit{no-op}).
 	\end{note}
 	\begin{note}
-		Amint elvesztettük az utolsó mutatót, ami egy adott lefoglalt memóriacímre mutat, az közel garantáltan elszivárgott memória. A szabvány nem foglal magában semmilyen lehetőséget ezeknek a visszaszerzésére (és könnyen látható, hogy ha meg is oldjuk, a szabványtól függetlenül hogy ezeket a memóriacímeket összevadásszuk, az igen költséges lenne).
+		Amint elvesztettük az utolsó mutatót, ami egy adott lefoglalt memóriacímre mutat, az garantáltan elszivárgott memória. A szabvány nem foglal magában semmilyen lehetőséget ezeknek a visszaszerzésére.
 	\end{note}
-	Láthatjuk, hogy a heap használata macerás, hibaforrásokkal teli, ráadásul az allokálás (memória lefoglalás) még lassabb is. De miért használjuk mégis? Nos, ha egy mód van rá, ne tegyük. Ha meg lehet oldani, hogy a stack-en el tudjunk tárolni valamit, tegyük azt. A stacken azonban nem lehet mindent létrehozni, továbbá nagyon véges, hamar be tud telni (\textit{stack overflow}), illetve kevésbé tudjuk kontrollálni a memóriát. A heap-en e téren sokkal nagyobb a szabadságunk.
+	Láthatjuk, hogy a heap használata hibalehetőségekkel teli, ráadásul az allokálás (memória lefoglalás) még lassabb is, mintha a stack-et használnánk. De miért használjuk mégis? Ha meg lehet oldani, hogy a stack-en tudjunk tárolni valamit, tegyük azt. A stacken azonban véges, hamar be tud telni (\textit{stack overflow}), illetve kötött a változók élettartama. A heap-en e téren sokkal nagyobb a szabadságunk.
 	\section{Osztályok felépítése}
 	A következő pár gyakorlaton egy láncolt listát fogunk implementálni, mely jól demonstrálja majd a dinamikus memóriakezelés veszélyeit is.
 	
@@ -233,7 +233,7 @@ int main()
 	delete head->next->next;
 }
 	\end{lstlisting}
-	Ezen a ponton mondhatjuk azt hogy készen vagyunk, hisz \texttt{List} használható láncolt listaként (bár valóban igen kényelmetlen).
+	Ezen a ponton készen vagyunk, hisz \texttt{List} használható láncolt listaként (bár valójában igen kényelmetlen).
 	\medskip
 	
 	\begin{figure}[!h]
@@ -261,7 +261,7 @@ int main()
 		\draw [arrow] (headNode) -- (7node);
 		\end{tikzpicture}
 	\end{figure}
-	Sajnos a törlést sikerült picit elcsesznünk: először kitörljük a fejelemet (mely az első elemre mutat), viszont az első elem segítségével tudnánk a többi elemre is hivatkozni, így mire a második listaelemet törölnénk, \texttt{head} már egy felszabadított memóriaterületre mutat, amit törlés utáni használatnak (\textit{use after delete}) szokás nevezni, és az egy nem definiált viselkedés.
+	Sajnos a törlést rossz: először törljük a fejelemet (mely az első elemre mutat), viszont az első elem segítségével tudnánk a többi elemet elérni, így mikor a második listaelemet törölnénk, \texttt{head} már egy felszabadított memóriaterületre mutat. Ezt törlés utáni használatnak (\textit{use after delete}) szokás nevezni és nem definiált viselkedés.
 	
 	A megoldás:
 	\begin{lstlisting}
@@ -270,12 +270,12 @@ delete head->next;
 delete head;
 	\end{lstlisting}
 	\begin{note}
-		A heap-en arra is figyelni kell, hogy jó sorrendben szabadítsuk fel a dolgokat. Könnyen lábonlőhetjük magunkat azzal, hogy egy kitörlünk valamit, ami hivatkozik egy másik memóriacímre, így azt a címet vagy elleakeljük, vagy ráhivatkozással nem definiált viselkedésbe keveredünk.
+		A heap-en arra is figyelni kell, hogy jó sorrendben szabadítsuk fel a memóriát. Ha rossz sorrendben szabadítjuk fel az objektumokat, könnyen a fentihez hasonló hibát vagy memória szívárgást okozhatunk.
 	\end{note}
-	A változók a stacken fordított sorrendben semmisülnek meg, pont emiatt.
+	A változók a stacken a létrehozás sorrendjéhez képest fordított sorrendben semmisülnek meg, pont emiatt.
 	\medskip
 	
-	Ez a ,,láncolt lista'' eddig eléggé gyér. A fő baj az, hogy nagyon sokat kell írni, méghozza lényegében ugyanazt, és nem feltétlenül kéne. Ez sért alap programozási gondolatmenetet, a DRY-t : \textit{Dont Repeat Yourself}. Itt sokszor írjuk le közel ugyanazt -- erre kell hogy legyen egy egyszerűbb megoldás. Írjunk függvényt az új listaelem létrehozásához!
+	Ez a ,,láncolt lista'' eddig elég szegényes. A fő gond az, hogy nagyon sokat kell írni a használatához. Ez sért egy programozási elvet, a DRY-t : \textit{Dont Repeat Yourself}. Itt sokszor írjuk le közel ugyanazt -- erre kell, hogy legyen egy egyszerűbb megoldás. Írjunk függvényt az új listaelem létrehozásához!
 	\begin{lstlisting}
 List *add(List *head, int data)
 {
@@ -290,10 +290,10 @@ List *add(List *head, int data)
 	return head;
 }
 	\end{lstlisting}
-	Ez egy olyan rekurzív függvény, mely addig hívja meg saját magát, míg a paraméterként kapott lista végére nem ér (azaz nem lesz \texttt{head} egy nullpointer). Amikor oda elér, létrehoz egy új listaelemet, ráfűzi a lista végére, és az új elem pointer adattagját (\texttt{next}) nullpointerré teszi.
+	Ez egy olyan rekurzív függvény, mely addig hívja saját magát, míg a paraméterként kapott lista végére nem ér (azaz a \texttt{head} egy nullpointer). Amikor oda elér, létrehoz egy új listaelemet és azt visszaadja. A rekurzió felszálló ágában a lista megfelelő elemeit összekapcsolja. 
 	\medskip
 	
-	Nem ártana egy függvény a felszabadítsára is.
+	Írjunk egy függvényt a lista által birtokolt memória felszabadítására is.
 	\begin{lstlisting}
 void free(List *head)
 {
@@ -303,11 +303,11 @@ void free(List *head)
 	delete head;
 }
 	\end{lstlisting}
-	Itt a rekurzió addig fog menni, amíg az utolsó elemhez el nem érünk, ami nullpointer. Itt simán visszatérünk, aztán fordított sorrendben kitörlünk minden elemet.
+	Itt a rekurzió szintén a lista végéig megy. A rekurzió felszálló ágában történik a listaelemek felszabadítása. Ennek az oka, hogy a felszabadítás a megfelelő sorrendben történjen meg.
 	\begin{note}
-		A rekurzív függvények nem olyan hatékonyak, mint az iterativ (pl. \texttt{for} vagy \texttt{while} ciklus) társaik, továbbá a sok függvényhívás könnyen stack overflow-hoz vezetnek. Azonban jó agytornák, és segíthetnek az alapötletben. Egy rekurzív függvényt mindig át lehet írni iteratívvá.
+		A rekurzív függvények nem olyan hatékonyak, mint az iterativ (pl. \texttt{for} vagy \texttt{while} ciklus) társaik. Továbbá a sok függvényhívás könnyen stack overflow-hoz vezetnek. Azonban jó agytornák, és segíthetnek az alapötletben. Egy rekurzív függvényt mindig át lehet írni iteratívvá.
 	\end{note}
-	Beszéljünk arról, mennyi a teher a felhasználón. Eddig tudnia kellett, milyen sorrendben kell felszabadítani midnent, de most már elég arra figylenie, hog lista használata után meg kell hívnia a \texttt{free} függvényt. A felhasználó így kisebb eséllyel követ el hibát, jobban tud figyelni arra, ami valóban a dolga. Legyenek a függvényeink és osztályaink olyanok, hogy \textbf{könnyű legyen őket jól használni, és nehéz legyen rosszul}.
+	Beszéljünk arról, mennyi a teher a felhasználón. Eddig tudnia kellett, milyen sorrendben kell felszabadítani az elemeket a listán belüle, de most már elég arra figylenie, hog lista használata után meghívja a \texttt{free} függvényt. A felhasználó így kisebb eséllyel követ el hibát, több energiája marad arra, hogy az előtte álló problémát megoldja. Legyenek a függvényeink és osztályaink olyanok, hogy \textbf{könnyű legyen őket jól használni, és nehéz legyen rosszul}.
 	
 	\subsection{Osztályra statikus változók}
 	Teszteljünk!
@@ -322,12 +322,12 @@ int main()
 	free(head);
 }
 	\end{lstlisting}
-	A program lefordult, és (nálunk) tökéletesen le is futott. Azonban ha történt memory leak, az egy nem definiált viselkedés, így nem lehetünk benne biztosak, hogy valóban nem történt szivárgás. Egy lehetséges módszer, amivel megvizsgálhatjuk ezt, a statikus változók használata.
+	A program lefordult, és a gyakorlaton tökéletesen le is futott. Azonban, ha történt memory leak vagy double free, esetleg use after free, az nem definiált viselkedés. Ezért nem lehetünk benne biztosak, hogy valóban nem történt memóriakezeléssel kapcsolatos hiba. A sanitizerek segítségével megyőződhetünk róla, hogy nem követtünk el ilyen jellegű hibát.
 	
 	\smallskip
 	Az osztályon belül statikusként deklarált változókat osztályszintű változóknak is hívjuk, ugyanis minden, az osztályhoz tartozó objektum ugyanazon a statikus változón ,,osztozkodik''. Ha az egyiken keresztül azt a változót módosítjuk, a többiben módosulni fog. Élettartamuk és láthatóságuk a program elejétől végéig tart.
 	
-	Hozzunk létre \texttt{List}-ben egy számlálót, ami számon tartja mennyi objektumot hoztunk belőle létre, és semmisítettünk meg!
+	Hozzunk létre \texttt{List}-ben egy számlálót, ami számon tartja mennyi objektumot hoztunk belőle létre, és semmisítettünk meg! Ezzek a trükkel megnézhetjük, hogy elfelejtettünk-e felszabadítani listaelemet.
 	\begin{lstlisting}
 struct List
 {
@@ -337,12 +337,14 @@ struct List
 	static int count; // !
 };
 
+int List::count = 0;
+
 List *add(List *head, int data)
 {
 	if (head == 0)
 	{
 		List *ret = new List;
-		head->count++; // !
+    List::count++; // !
 		ret->data = data;
 		ret->next = 0;
 		return ret;
@@ -356,7 +358,7 @@ void free(List *head)
 	if (head == 0)
 	return;
 	free(head->next);
-	head->count--; // !
+  List::count--; // !
 	delete head;
 }
 
@@ -368,35 +370,28 @@ int main()
 	head = add(head, 2);
 	
 	free(head);
-	std::cout << head->count; // !
+	std::cout << List::count; // !
 }
 	\end{lstlisting}
-	Azonban kaptunk egy fordítási hibát, miszerint hiányzik \texttt{count} definíciója -- Ahogy fent is említve volt, itt csak \textit{deklaráltuk}, de nem \texttt{definiáltuk} \texttt{count}-ot, így ezt tegyük is meg gyorsan.
 	
-	Osztályszintű változókat csak osztályon kívül tudunk definiálni (ezek alól kivételt képeznek az osztályszintű konstans változók):
+	Osztályszintű változókat csak osztályon kívül tudunk definiálni (ezek alól kivételt képeznek az osztályszintű konstans változók), ezért látható az osztály után a következő sor:
 	\begin{lstlisting}
-int List::count;
+int List::count = 0;
 	\end{lstlisting}
-	Figyeljük meg, hogy \texttt{count}-nak nem adtunk kezdőértéket, hisz minden statikus változó (számok esetében) alapértelmezetten 0-ra incializál.
-	\smallskip
 	
-	Mivel azonban ez a változó minden \texttt{List} objektummal közös, így nem muszáj egy változón keresztül hivatkozunk rá, a \texttt{List::count} kifejezéssel is megtehetjük.
-	\medskip
-	
-	Ezzel a kis módosítással meg is kapjuk a kívánt kimenetet, \texttt{0}. Ez alapján tudhatjuk, hogy minden objektum törlésre került.
+	Ezzel a kis módosítással meg is kapjuk a kívánt kimenetet: \texttt{0}. Ez alapján tudhatjuk, hogy minden objektum törlésre került.
 	\begin{note}
-		A későbbiekben úgy tekintünk \texttt{List}-re, mintha ezeket a módosításokat nem ejtettük volna meg.
+		A fenti módosítások csak gyakorlás célját képezték, az elkészítedő listának nem része a számláló.
 	\end{note}
-	Ha azonban egy elemet kétszer töröltünk, az lehet, hogy nem derül ki. Ennek kiszűrésében segíthet, ha ezzel a paranccsal fordítjuk a kódunkat:
+	Ha azonban egy elemet kétszer töröltünk, egyet meg elszivárogtattunk, az nem feltétlen nem derül ki. Ilyenkos a sanitizerek segíthetnek:
 	\begin{center}
 		\texttt{g++ list.cpp -fsanitize=address -g}
 	\end{center}
-	E segítségével úgy fordul a kód, hogy futási időjű ellenőrzéséket tesz bele a fordító, hogy nem szivárog-e a memória, vagy nem töröltük-e valamit kétszer (a \texttt{-g} a szebb hibaüzenetekhez kell). Ha ez bekövetkezne, megállítja a program futását, és ,,jól'' átlátható hibaüzenetet ad (bővebben: 3. gyakorlat anyaga). 
-	
+  A sanitizerekről bővebben lásd a 3. gyakorlat anyagát.
 	\medskip
-	Ez a láncolt lista még mindig messze áll egy jó struktúrától. Szerencsére nem csak adattagokat, de függvényeket is tudunk struct-okba írni, melyek alapértelmezetten hozzáférnek az adott objektum adattagjaihoz.
+	Határozott előrelépést értünk el, de van még hova fejleszteni a listánkat. Szerencsére nem csak adattagokat, de tagfüggvényeket is tudunk struct-okba írni.
 	\subsection{Konstruktorok}
-	Próbáljuk megoldani azt, hogy ne kelljen egy listaelem adattagjainak mindig külön sorban értéket adni!
+	Egy trükkel megoldható, hogy tömörebb szintaxissal tudjuk inicializálni a listaelemeinket.
 	\begin{lstlisting}
 struct List
 {
@@ -409,10 +404,10 @@ struct List
 	A fenti tagfüggvényt, vagy metódust \textbf{konstruktor}nak (\textit{constructor}, vagy röviden \textit{ctor}) hívjuk. A konstruktorok hozzák létre az objektumokat; vannak paraméterei, és nincs visszatérési értéke. A fenti konrtruktor még egy alapértelmezett paraméterrel is rendelkezik - ha mi csak egy \texttt{int} paraméterrel hívjuk meg a konstruktort, akkor a \texttt{\_next}-et alapértelmezetten nullpointernek veszi.
 	
 	\medskip
-	Azonban a struktúránk működött eddig is, mégse írtunk konstruktort. Azonban az mindig kell a létrehozáshoz, hogyan lehet ez? Úgy, hogy a fordító a hiányzó kulcsfontosságú függvényeket megírja nekünk, létrehoz egy un. \textbf{default konstruktort} (többek között), ha mi explicit nem írtunk semmilyet, melynek nincsenek paraméterei, és minden adattagot alapértelmezetten hoz létre. Fontos azonban, hogyha mi írunk egy konstruktort, akkor a fordító már nem fog generálni ilyet.
+	Azonban a struktúránk működött eddig is, pedig nem írtunk konstruktort. Ha konstruktorra szükség van objektum létrehozáshoz, akkor hogyan lehet ez? Úgy, hogy a fordító a hiányzó kulcsfontosságú függvényeket legenerálja nekünk. Létrehoz (többek között) egy un. \textbf{default konstruktort}, ha mi explicit nem hoztunk létre konstruktort. A default konstruktor 0 paraméterrel meghívható. Fontos azonban, ha mi írunk egy konstruktort, akkor a fordító már nem fog generálni ilyet.
 	
 	\medskip
-	A kódban van továbbá egy un. \textbf{inicializációs lista}. Ez az a rész, ami a konstruktor paraméterei után kettőspont után következik. Az inicializációs lista elkerülhető néha, de nem éri meg általában. Ugyanis ha ezt írnánk:
+	A konstruktor fejléce után található egy un. \textbf{inicializációs lista}. Az inicializációs lista hasonló jelentéssel bír, mint a következő kód:
 	\begin{lstlisting}
 List(int _data, List *_next = 0)
 {
@@ -420,21 +415,19 @@ List(int _data, List *_next = 0)
 	next = _next;
 }
 	\end{lstlisting}
-	%TODO Ez szerintem nem igaz így.
-	akkor mire a kapcsos zárójeles részhez érünk, addigra a \texttt{data} és a \texttt{next} létre lenne hozva, és utána kapna csak értéket. A fenti inicializációs listában az elemet a megadott értékkel inicializálódnak, és nem csak később kapnak értéket.
+  Az inicializációs lista használata azonban hatékonyabb.
+	Mire a konstruktor törzséhez érünk, addigra az adattagoknak inicializálva kell lenniük. A trözsben ezért már inicializált értékeket írunk felül, ami erőforráspazarlás. Primitív típusok esetén ez nem jelent problémát, összetett típusok esetén viszont számottevő lehet.
 	\begin{note}
-		A létrehozás és értékadás 2 lépés, az inicializálás csak 1.
+    A konstruktor törzsében történő értékadás 2 lépés (mivel előtte egy alapértelmezett konstruktor már inicializálta az objektumot), az inicializálás csak 1.
 	\end{note}
-	Fontos megjegyzés, hogy az a struktúra elemei mindig megadott sorrendben inicializálódnak. Tehát, bármilyen sorrendben írjuk mi az inicializációs listát, mindig először a \texttt{data}, és utána a \texttt{next} fog inicializálódni, hacsak nem cseréljük fel a sorrendjüket a struct-ban.
+	Fontos megjegyzés, hogy az a struktúra elemei a meződ definiálásának a sorrendjében inicializálódnak. Tehát, bármilyen sorrendben írjuk mi az inicializációs listát, mindig először a \texttt{data}, és utána a \texttt{next} fog inicializálódni.
 	\subsection{Destrukorok}
-	Ahogy gondoskodtunk a listaelemek létrehozásáról, gondoskodhatnánk annak megfelelő megsmmisüléséről is.
+	Ahogy gondoskodtunk a listaelemek létrehozásáról, gondoskodhatnánk annak megfelelő megsemmisüléséről is.
 	\begin{lstlisting}
 struct List
 {
-	//ctor (construktor)
 	List(int data, List *next = 0) : data(data), next(next) {}
-	//dtor (destructor)
-	~List()
+	~List() // dtor
 	{
 		delete next;
 	}
@@ -443,10 +436,10 @@ struct List
 	List *next;
 };
 	\end{lstlisting}
-	Az fenti tagfüggvényt, melynél a hullámvonalat közvetlenül a struktúra neve követi \textbf{destruktor}nak (\textit{destruktor}, röviden \textit{dtor}) nevezzük. A destruktor mindig az objektum élettartamának végén hívódik meg, és gondoskodik az adattagok megsemmisítéséről. Lévén az élettartam végén hívódik meg ez a függvény, lehetőséget teremt nekünk arra, hogy a dinamikusan lefoglalt memóriacímeket felszabadítsuk.
+	Az fenti tagfüggvényt, melynél a hullámvonalat közvetlenül a struktúra neve követi \textbf{destruktor}nak (\textit{destruktor}, röviden \textit{dtor}) nevezzük. A destruktor mindig az objektum élettartamának végén hívódik meg, és gondoskodik a megfelelő erőforrások felszabadításáról. 
 	
 	\medskip
-	Ez is egy rekurzív függvény: a \textbf{next} törlésekor megpróbál kitörölni egy \texttt{List} típusú elemet, ami megint meghívja ezt a destruktort, stb. A lista végén a \texttt{next} egy nullpointer, azzal nem tesz semmit, a destuktor futása befejeződik, és fordított irányban kitöröl mindent.
+	A destruktort is rekurzívan írtuk meg: a \textbf{next} által mutatott memóriaterület felszabadításakor meghívja \texttt{List} típusú elem destruktorát. A lista végén a \texttt{next} egy nullpointer, azon a delete hívás nem csinál semmit.
 	
 	\medskip
 	Teszteljünk!
@@ -461,31 +454,19 @@ int main()
 	Most úgy alakítottuk át a kódot, hogy amikor létrehozzuk a listát, akkor a fejelemet a stacken hozzuk létre, melynek értéke 8, és a pointer része nullpointer. Később az \texttt{add} függvénnyel létrehozunk a heapen egy olyan listaelemet, mely 7-et tárol, és pointer része nullpointer, és az eredeti lista fejét ráállítjuk erre.
 	\medskip
 	
-	Itt sikeresen elértük azt, hogy a lista első eleme a stack-en, de minden más eleme a heap-en legyen. Mivel olyan struktrát írtunk, mely gondoskodik arról, hogy minden dinamikusan lefoglalt területet felszabadítson, mindent csak egyszer töröl, jó sorrendben, egy  \textit{RAII} (\textit{Resource acquisition is initialization}) osztályt írtunk. Ez Bjorne-nek egy
-	\begin{center}
-		\textit{,,iszonyatosan szar''}
-		
-		/Horváth Gábor/
-	\end{center}
-	acronymje. Azt mondja ki, hogy a nyelv által garantált módon pontosan tudjuk hogy az objektumok mikor jönnek létre, mikor semmisülnek meg, stb.
+	Itt sikeresen elértük, hogy a lista első eleme a stack-en, de minden más eleme a heap-en legyen. Mivel olyan struktrát írtunk, mely gondoskodik arról, hogy minden dinamikusan lefoglalt területet felszabadítson, mindent csak egyszer töröl, jó sorrendben, egy  \textit{RAII} (\textit{Resource acquisition is initialization}) osztályt írtunk. Ez Bjarne-nek egy elég szerencsétlenül választott acronymje. A lényege, hogy az adott osztály a megfelelő erőforrásokat lefoglalja magának, majd a destruktor gondoskodik az erőforrások felszabadításáról. Minden erőforrást egy stack-en lévő objektumhoz kötünk, mivel azok garantáltan automatikusan fel fognak szabadulni, a destruktoruk le fog futni. Jelen esetben a lista fejeleme, ami a stack-en van, felelős azért, hogy a heap-re allokált listaelemek felszabaduljanak a program futásának a végeztével. Így a felhasználónak már a free hívásra sem kell figyelnie.
 	
-	Bjorne továbbá kijelentette, hogy a c++ legjobban garbage kollektált nyelv, mert nincs benne garbage. Ha jól programozunk, akkor az objektumok mindig eltakarítanak maguk után. 
+	Bjarne híres mondása, hogy a C++ szemétgyüjtéssel rendelkező nyelv, mert nem generál szemetet. A jól megírt objektumok mindig eltakarítanak maguk után. 
 	\medskip
 	
-	Sikerült azt is elérnünk, hogy ez nagyon hatékony legyen, hiszen a ha nem így konstruktor/destruktor trükközéssel dogloznánk, akkor kézzel kéne írni, ami ennél nem lenne gyorsabb, csak kényelmetlenebb.
+	A konstruktor/destruktor használata ugyanolyan hatékony, mintha kézzel kezeltük volna a memóriát.
 	
 	\medskip
-	Csináljunk az \texttt{add} függvényből metódust!
+	Csináljunk az \texttt{add} függvényből tagfüggvényt!
 	\begin{lstlisting}
 struct List
 {
-	List(int data, List *next = 0) : data(data), next(next) {}
-	~List()
-	{
-		delete next;
-	}
-	
-	
+  // ...	
 	void add(int data) //eltunt egy parameter!
 	{
 		if (next == 0)
@@ -508,12 +489,12 @@ int main()
 	head.add(2);
 }
 	\end{lstlisting}
-	Ez a nyelv egyik szépsége, hisz a felhasználónak nem kell tudnia, mi megy a háttérben, sőt, még értenie se kell, mi történik a belső implementációban.
+	A nyelv egyik szépsége, hogy a felhasználónak nem kell tudnia, hogy hogyan reprezentáltuk a listát. A listát az a felhasználó is tudja használni, aki nem ismeri a heap-et, nem hallott még soha láncolt adatszerkezetekről. A későbbiekben a lista prerezentációja kicserélhető akár egy vektor szerű adatszerkezetre anélkül, hogy a felhasználói kódot módosítani kellene.
 	\medskip
 	
 	\subsection{Másoló konstruktor}
 	
-	A fordító nagyon sokmindent megír a structunkba: konstruktoron és destruktoron kívül még \textbf{másoló konstruktor}t (\textit{copy constructor}) is ír. A másoló konstruktor egy olyan konstrukor, melynek egyetlen paramétere egy azonos típusú objektum. Azonban ez alapértelmezetten bitről bitre másol Ez mit jelent?
+	A fordító sok kódot generál a structunkba: konstruktoron és destruktoron kívül még \textbf{másoló konstruktor}t (\textit{copy constructor}) is. A másoló konstruktor egy olyan konstrukor, melynek egyetlen paramétere egy azonos típusú objektum. Ez alapértelmezetten minden adattagot lemásol az adott adattag másoló konstruktora segítségével. Primitív típusoknál ez bitről bitre másolást jelent. Mi ennek a következménye?
 	\begin{lstlisting}
 int main()
 {
@@ -525,7 +506,7 @@ int main()
 	} //itt lefut cHead destruktora
 }
 	\end{lstlisting}
-	Fentebb létrehoztunk egy új listát \texttt{head} mintájára. Nyilván, a másolatnak a destruktora hamarabb lefut. Futtatáskor (ha sanitizerrel fordítunk) egy kilométer hibaüzenetet kapunk: többször próbáltuk meg ugyanazt a memóriaterületet felszabadítani. Ennek az az oka, hogy a \texttt{cHead}-ben lévő pointer \textbf{ugyanarra} a listára fog mutatni (lévén a bitről bitre történő másolásnál a pointerek ugyanazt a memóriacímet adják értékül egymásnak), és a \texttt{cHead} megsemmisülése után a \texttt{head} is megpróbálja a már kitörölt listát kitörölni.
+	Fentebb létrehoztunk egy új listát \texttt{head} mintájára. A másolatnak a destruktora hamarabb lefut. Ha sanitizerrel fordítunk, futáskor hibaüzenetet kapunk: felszabadított memóriaterületet szeretnénk használni. Ennek az az oka, hogy a \texttt{cHead}-ben lévő pointer \textbf{ugyanarra} a listára fog mutatni (lévén a bitről bitre történő másolás történt a pointernél). A \texttt{cHead} megsemmisülése után a \texttt{head} destruktora megpróbál beleolvasni a már felszabadított memóriaterületbe.
 	
 	%\resizebox{\textwidth}{!}{%
 	\begin{figure}[!h]
@@ -560,7 +541,7 @@ int main()
 	\end{figure}
 	%}
 	
-	Kerüljük ki a hibát, és írjunk saját copy konstruktort!
+	A megoldás egy saját másoló konstruktor bevezetése!
 	
 	
 \begin{lstlisting}
@@ -589,7 +570,7 @@ int main()
 	}
 }
 \end{lstlisting}
-	Mint a korábbi függvényeink, ez is rekurzióval működik: a \texttt{new List(*other.next)} újra és újra meghívja a copy konstruktort, amíg az other.next nem lesz nullpointer.
+	Mint a korábbi függvényeink, ez is rekurzív: a \texttt{new List(*other.next)} újra meghívja a copy konstruktort, ha az other.next nem nullpointer.
 	\begin{figure}[!h]
 		\centering
 		\begin{tikzpicture}
@@ -624,7 +605,7 @@ int main()
 	\medskip
 	Ezzel meg is oldottuk a problémát. 
 	
-	Figyelem, ez egy \textbf{copy konstruktor, nem értékadás operátor!} Itt a \texttt{cHead} még nincs létrehozva, amikor head-el \textbf{inicializálni} próbáljuk. Ha az egyenlőségjel bal oldalán lévő objektum még nem jött létre, mint itt, akor a copy konstruktor hívódik meg. Ellenkező esetben értékadás operátor.
+	Figyelem, ez egy \textbf{copy konstruktor, nem értékadás operátor!} Itt a \texttt{cHead} még nincs létrehozva, amikor head-el \textbf{inicializáljuk}. Ha az egyenlőségjel bal oldalán lévő objektum még nem jött létre, mint itt, akor a copy konstruktor hívás történik. Ellenkező esetben értékadás operátor.
 	\begin{lstlisting}
 List cHead = head; //copy ctor
 
